--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" ng-app="appTime">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -62,6 +62,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body background="img/mesh-for-web.png">
+  	<img src="img/ajax-loader.gif">
    
     <div class="container" ng-app="leaderBoardApp">
 
@@ -71,7 +72,7 @@
 	  
       <div id="secRow" class="row">
 		  	<span id="title">Welcome App Leaderboard</span>
-			<div id="time" class="col-sm-offset-7" ng-controller = "countController"> 
+			<div id="time" class="col-sm-offset-7"  ng-app="appTime" ng-controller = "countController"> 
             	<span ng-show="showDay">{{days}} day, </span><span>{{hours}} : {{mins}} : {{seconds}}</span> <br>
         	<div>
 	  </div>
