--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<tbody ng-repeat="item in items | limitTo:10 ">
 				<tr><td class="text-center">{{$index + 1}}</td><td>{{item.first_name}} {{item.last_name}}</td><td class="text-right">{{item.time}}</td></tr>
             </tbody>
-		</table>  
+		</table>
 	  </div>
       <!-- FOOTER -->
       <footer>
@@ -71,28 +71,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/docs.min.js"></script>
     <script src="js/angular.min.js"></script>
     <script src="js/angular-resource.min.js"></script>
 
-    <script type="text/javascript">
-        angular.module("leaderBoardApp", [])
-            .controller("LeaderBoardController", function ($scope) {
-                $scope.items = [
-                    {"first_name": "Kelli", "last_name": "Guiney", "time": "01:00:58"},
-                    {"first_name": "Brett", "last_name": "Cooper", "time": "01:05:35"},
-                    {"first_name": "Felicity", "last_name": "White", "time": "01:07:15"},
-                    {"first_name": "Monty", "last_name": "Hamilton", "time": "01:08:05"},
-                    {"first_name": "Sarah", "last_name": "Battwraden", "time": "01:11:03"},
-                    {"first_name": "Bob", "last_name": "Reynolds", "time": "01:11:37"},
-                    {"first_name": "Mike", "last_name": "Baxter", "time": "01:14:14"},
-                    {"first_name": "Terry", "last_name": "Gillespie", "time": "01:14:15"},
-                    {"first_name": "Chris", "last_name": "Ford", "time": "01:22:27"},
-                    {"first_name": "Sunil", "last_name": "Samarasinghe", "time": "01:24:24"},
-                    {"first_name": "Dan", "last_name": "Martin", "time": "01:25:29"}
-                ];
-            });
-    </script>
+    <script type="text/javascript" src="js/leader-board-controller.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
