try to fix table in iPhone5

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  
       <div id="secRow" class="row">
 
-			<div id="time" style="float:right" ng-controller = "countController">
+			<div id="time" style="float:right" class="text-nowrap" ng-controller = "countController">
             	<span ng-show="showDay">Closes in: <span class="big-size">{{days}}</span> days,</span><span class="big-size"> {{hours}} : {{mins}} : {{seconds}}</span>
         	</div>
 			<span id="title" class="text-nowrap">Welcome App Leaderboard</span>
@@ -50,7 +50,7 @@
 	  <div id="tablelist" class="row" ng-controller="LeaderBoardController">
 		<table class="table table-box">
 			<thead>
-				<tr class="table-header "><th width="10%" class="text-center">RANK</th><th>NAME</th><th width="20%" class="text-right">TIME<span style="color:rgba(94, 0, 126, 0.35)">(HH:MM:SS)</span></th></tr>
+				<tr class="table-header "><th width="5%" class="text-center">RANK</th><th width="60%">NAME</th><th width="20%" class="text-right">TIME<span style="color:rgba(94, 0, 126, 0.35)">(HH:MM:SS)</span></th></tr>
 			</thead>
 			<tbody ng-repeat="item in items | limitTo:10 ">
 				<tr><td class="text-center">{{$index + 1}}</td><td>{{item.first_name}} {{item.last_name}}</td><td class="text-right">{{item.time}}</td></tr>
