--- a/index.html
+++ b/index.html
@@ -55,12 +55,20 @@
 				<tr><td class="text-center">{{$index + 1}}</td><td>{{item.first_name}} {{item.last_name}}</td><td class="text-right">{{item.time}}</td></tr>
             </tbody>
 		</table>
+
+      <div id="loadingWidget" class="row-fluid ui-corner-all" ng-show="dataLoaded">
+          <div class="loadingContent">
+              <img alt="Loading Content" src="img/ajax-loader.gif" class="center-block"/>
+          </div>
+      </div>
 	  </div>
+
       <!-- FOOTER -->
       <footer>
               <img class="center-block" width="50px" height="50px" src="img/s-logo-hollow.png">
 			  <p class="text-center" style="color:white">Strategology Dept.</p>
       </footer>
+
 
     </div><!-- /.container -->
 
