fix the position of loading indicator

--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
             </tbody>
 		</table>
 
+          <div class="container">
       <div id="loadingWidget" class="row-fluid ui-corner-all" ng-show="dataLoaded">
           <div class="loadingContent">
               <img alt="Loading Content" src="img/ajax-loader.gif" class="center-block"/>
           </div>
       </div>
+          </div>
 	  </div>
 
       <!-- FOOTER -->
