--- a/index.html
+++ b/index.html
@@ -46,17 +46,14 @@
 			<span id="title" class="text-nowrap">Welcome App Leaderboard</span>
 	  </div>
 
-	  <div id="tablelist" class="row" ng-controller="LeaderBoardController">
+	  <div id="tablelist" ng-controller="LeaderBoardController" ng-class="showListClassName"  ng-cloak>
 		<table class="table table-box">
 			<thead>
 				<tr class="table-header "><th width="5%" class="text-center">RANK</th><th width="60%">NAME</th><th width="20%" class="text-right">TIME<span style="color:rgba(94, 0, 126, 0.35)">(HH:MM:SS)</span></th></tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="item in items | limitTo:10">
-                    <td class="text-center">{{$index + 1}}</td>
-                    <td>{{item.first_name}} {{item.last_name}}</td>
-                    <td class="text-right">{{item.time}}</td>
-                </tr>
+			<tr><td colspan="3"  ng-show="errorMessage">{{errorMessage}}</td></tr>
+				<tr ng-repeat="item in items | limitTo:10 "><td class="text-center">{{$index + 1}}</td><td>{{item.first_name}} {{item.last_name}}</td><td class="text-right">{{item.time}}</td></tr>
             </tbody>
 		</table>
 
