--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Telstra  is Australia's leading provider of mobile phones, mobile devices, home phones and broadband internet. Save money by buying online.">
     <meta name="author" content="">
-
-    <script type="text/javascript" src="./angular.js"></script>
-    <script type="text/javascript" src="./js/controllers.js"></script>
     <link rel="icon" href="favicon-blue.ico">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -26,12 +23,10 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- Custom styles for this template -->
+    <!-- Custom styles for this page -->
     <link href="css/sample.css" rel="stylesheet">
   </head>
-<!-- NAVBAR
-================================================== -->
-  <body>
+<body>
 <div class="container" id="background-container">
     <div class="container" ng-app="leaderBoardApp">
 
@@ -40,32 +35,36 @@
 	  </div>
 	  
       <div id="secRow" class="row">
+		  	<span id="title" class="text-nowrap">Welcome App Leaderboard</span>
 			<div id="time" style="float:right" class="text-nowrap" ng-controller = "countController">
-            	<span>Closes in: <span ng-show="showDay" class="big-size">{{days}} days, </span></span><span class="big-size"> {{hours}} : {{mins}} : {{seconds}}</span>
+            	<span>Closes in:&nbsp;&nbsp;&nbsp;<span ng-show="showDay" class="big-size">{{days}}</span><span>&nbsp;days, </span></span><span class="big-size"> {{hours}} : {{mins}} : {{seconds}}</span>
         	</div>
-			<span id="title" class="text-nowrap">Welcome App Leaderboard</span>
 	  </div>
 
-	  <div id="tablelist" class="row" ng-controller="LeaderBoardController">
+	  <div id="tablelist" class="table-responsive" ng-controller="LeaderBoardController">
 		<table class="table table-box">
 			<thead>
-				<tr class="table-header "><th width="5%" class="text-center">RANK</th><th width="60%">NAME</th><th width="20%" class="text-right">TIME<span style="color:rgba(94, 0, 126, 0.35)">(HH:MM:SS)</span></th></tr>
+				<tr class="table-header ">
+					<th width="15%" class="text-center">RANK</th>
+					<th>NAME</th>
+					<th width="20%" class="text-right">TIME<span style="color:rgba(94, 0, 126, 0.35)">(HH:MM:SS)</span></th>
+				</tr>
 			</thead>
-			<tbody>
-				<tr ng-repeat="item in items | limitTo:10">
-                    <td class="text-center">{{$index + 1}}</td>
-                    <td>{{item.first_name}} {{item.last_name}}</td>
-                    <td class="text-right">{{item.time}}</td>
-                </tr>
+			<tbody ng-repeat="item in items | limitTo:10 ">
+				<tr>
+					<td class="text-center">{{$index + 1}}</td>
+					<td class="text-left">{{item.first_name}} {{item.last_name}}</td>
+					<td class="text-right">{{item.time}}</td>
+				</tr>
             </tbody>
 		</table>
 
           <div class="container">
-              <div id="loadingWidget" class="row-fluid ui-corner-all" ng-show="dataLoaded">
-                  <div class="loadingContent">
-                      <img alt="Loading Content" src="img/ajax-loader.gif" class="center-block"/>
-                  </div>
-              </div>
+      		<div id="loadingWidget" class="row-fluid ui-corner-all" ng-show="dataLoaded">
+          	  	<div class="loadingContent">
+              		<img alt="Loading Content" src="img/ajax-loader.gif" class="center-block"/>
+          		</div>
+      	  	</div>
           </div>
 	  </div>
 
@@ -75,7 +74,9 @@
 			  <p class="text-center" style="color:white">Strategology Dept.</p>
       </footer>
 
+
     </div><!-- /.container -->
+
 </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -84,7 +85,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/angular.min.js"></script>
     <script src="js/angular-resource.min.js"></script>
-
+    <script type="text/javascript" src="./angular.js"></script>
+    <script type="text/javascript" src="./js/controllers.js"></script>
     <script type="text/javascript" src="js/leader-board-controller.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
