--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="css/sample.css" rel="stylesheet">
   </head>
 <body>
-<div class="container" id="background-container">
+<div class="container-fluid" id="background-container">
     <div class="container" ng-app="leaderBoardApp">
 
       <div id="firstRow" class="row">
