--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="css/sample.css" rel="stylesheet">
   </head>
 <body>
-<div class="container" id="background-container">
+<div class="container-fluid" id="background-container">
     <div class="container" ng-app="leaderBoardApp">
 
       <div id="firstRow" class="row">
@@ -42,13 +42,13 @@
        	</div>
 	</div>
 
-	  <div id="tablelist" class="table-responsive" ng-controller="LeaderBoardController" ng-class="showListClassName"  ng-cloak>
+	  <div id="tablelist" class="table-responsive" ng-controller="LeaderBoardController" ng-cloak>
 		<table class="table table-box">
 			<thead>
 				<tr class="table-header ">
 					<th width="15%" class="text-center">RANK</th>
 					<th>NAME</th>
-					<th width="20%" class="text-right">TIME<span style="color:rgba(94, 0, 126, 0.35)">(HH:MM:SS)</span></th>
+					<th width="20%" class="text-right">TIME<span style="color:rgba(94, 0, 126, 0.4)">(HH:MM:SS)</span></th>
 				</tr>
 			</thead>
 			<tbody ng-repeat="item in items | limitTo:10 ">
@@ -57,10 +57,10 @@
 					<td class="text-left">{{item.first_name}} {{item.last_name}}</td>
 					<td class="text-right">{{item.time}}</td>
 				</tr>
-			<tbody>
-			<tr><td colspan="3"  ng-show="errorMessage">{{errorMessage}}</td></tr>
-				<tr ng-repeat="item in items | limitTo:10 "><td class="text-center">{{$index + 1}}</td><td>{{item.first_name}} {{item.last_name}}</td><td class="text-right">{{item.time}}</td></tr>
-      </tbody>
+				<tr>
+					<td colspan="3"  ng-show="errorMessage">{{errorMessage}}</td>
+				</tr>
+      	  	</tbody>
 		</table>
 
           <div class="container">
