--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <![endif]-->
 
     <!-- Custom styles for this page -->
-    <link href="css/sample.css" rel="stylesheet">
+    <link href="css/leaderboard.css" rel="stylesheet">
   </head>
 <body>
 <div class="container-fluid" id="background-container">
