--- a/index.html
+++ b/index.html
@@ -1,98 +1,103 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Telstra  is Australia's leading provider of mobile phones, mobile devices, home phones and broadband internet. Save money by buying online.">
+    <meta name="description"
+          content="Telstra  is Australia's leading provider of mobile phones, mobile devices, home phones and broadband internet. Save money by buying online.">
     <meta name="author" content="">
     <link rel="icon" href="favicon-blue.ico">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
     <title>Welcome App Leaderboard</title>
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--[if lt IE 9]>
+    <script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
     <!-- Custom styles for this page -->
     <link href="css/leaderboard.css" rel="stylesheet">
-  </head>
+</head>
 <body>
 <div class="container-fluid" id="background-container">
     <div class="container" ng-app="leaderBoardApp">
 
-      <div id="firstRow" class="row">
-		  	<img width="34px" height="40px" src="img/t-logo.png">
-	  </div>
-	  
+        <div id="firstRow" class="row">
+            <img width="34px" height="40px" src="img/t-logo.png">
+        </div>
 
-	<div id="secRow" class="row">
-  		<span id="title" class="text-nowrap">Welcome App Leaderboard</span>
-		<div id="time" style="float:right" class="text-nowrap" ng-controller = "countController">
-           	<span>Closes in:&nbsp;&nbsp;&nbsp;<span ng-show="showDay" class="big-size">{{days}}</span><span>&nbsp;days, </span></span><span class="big-size"> {{hours}} : {{mins}} : {{seconds}}</span>
-       	</div>
-	</div>
+        <div id="secRow" class="row">
+            <span id="title" class="text-nowrap">Welcome App Leaderboard</span>
 
-	  <div id="tablelist" class="table-responsive" ng-controller="LeaderBoardController" ng-cloak>
-		<table class="table table-box">
-			<thead>
-				<tr class="table-header ">
-					<th width="15%" class="text-center">RANK</th>
-					<th>NAME</th>
-					<th width="20%" class="text-right">TIME<span style="color:rgba(94, 0, 126, 0.4)">(HH:MM:SS)</span></th>
-				</tr>
-			</thead>
-			<tbody ng-repeat="item in items | limitTo:10 ">
-				<tr>
-					<td class="text-center">{{$index + 1}}</td>
-					<td class="text-left">{{item.first_name}} {{item.last_name}}</td>
-					<td class="text-right">{{item.time}}</td>
-				</tr>
-				<tr>
-					<td colspan="3"  ng-show="errorMessage">{{errorMessage}}</td>
-				</tr>
-      	  	</tbody>
-		</table>
+            <div id="time" style="float:right" class="text-nowrap" ng-controller="countController">
+                <span>Closes in:&nbsp;&nbsp;&nbsp;<span ng-show="showDay" class="big-size">{{days}}</span><span>&nbsp;days, </span></span><span
+                    class="big-size"> {{hours}} : {{mins}} : {{seconds}}</span>
+            </div>
+        </div>
 
-          <div class="container">
-      		<div id="loadingWidget" class="row-fluid ui-corner-all" ng-show="dataLoaded">
-          	  	<div class="loadingContent">
-              		<img alt="Loading Content" src="img/ajax-loader.gif" class="center-block"/>
-          		</div>
-      	  	</div>
-          </div>
-	  </div>
+        <div id="tablelist" class="table-responsive" ng-controller="LeaderBoardController" ng-cloak>
+            <table class="table table-box">
+                <thead>
+                <tr class="table-header ">
+                    <th width="15%" class="text-center">RANK</th>
+                    <th>NAME</th>
+                    <th width="20%" class="text-right">TIME<span style="color:rgba(94, 0, 126, 0.4)">(HH:MM:SS)</span>
+                    </th>
+                </tr>
+                </thead>
+                <tbody ng-repeat="item in items | limitTo:10 ">
+                <tr>
+                    <td class="text-center">{{$index + 1}}</td>
+                    <td class="text-left">{{item.first_name}} {{item.last_name}}</td>
+                    <td class="text-right">{{item.time}}</td>
+                </tr>
+                <tr>
+                    <td colspan="3" ng-show="errorMessage">{{errorMessage}}</td>
+                </tr>
+                </tbody>
+            </table>
 
-      <!-- FOOTER -->
-      <footer>
-              <img class="center-block" width="50px" height="50px" src="img/s-logo-hollow.png">
-			  <p class="text-center" style="color:white">Strategology Dept.</p>
-      </footer>
+            <div class="container">
+                <div id="loadingWidget" class="row-fluid ui-corner-all" ng-show="dataLoaded">
+                    <div class="loadingContent">
+                        <img alt="Loading Content" src="img/ajax-loader.gif" class="center-block"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- FOOTER -->
+        <footer>
+            <img class="center-block" width="50px" height="50px" src="img/s-logo-hollow.png">
+
+            <p class="text-center" style="color:white">Strategology Dept.</p>
+        </footer>
 
 
-    </div><!-- /.container -->
+    </div>
+    <!-- /.container -->
 
 </div>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/angular.min.js"></script>
-    <script src="js/angular-resource.min.js"></script>
-    <script type="text/javascript" src="./angular.js"></script>
-    <script type="text/javascript" src="./js/controllers.js"></script>
-    <script type="text/javascript" src="js/leader-board-controller.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/angular.min.js"></script>
+<script src="js/angular-resource.min.js"></script>
+<script type="text/javascript" src="./angular.js"></script>
+<script type="text/javascript" src="./js/controllers.js"></script>
+<script type="text/javascript" src="js/leader-board-controller.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="js/ie10-viewport-bug-workaround.js"></script>
+</body>
 </html>
