make date updated every 30 seconds

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div id="tablelist" class="table-responsive" ng-controller="LeaderBoardController" ng-cloak>
+        <div class="table-responsive" ng-controller="LeaderBoardController" ng-cloak>
             <table class="table table-box">
                 <thead>
                 <tr class="table-header ">
