--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="secRow" class="row">
             <span id="title">Welcome App Leaderboard</span>
 
-            <div id="time" style="float:right" ng-controller="countController">
+            <div id="time" style="float:right" ng-controller="countController" ng-cloak>
                 <span>Closes in:&nbsp;&nbsp;&nbsp;<span ng-show="showDay" class="big-size">{{days}}</span><span>&nbsp;days, </span></span><span
                     class="big-size"> {{hours}} : {{mins}} : {{seconds}}</span>
             </div>
