--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <span id="title" class="text-nowrap">Welcome App Leaderboard</span>
 
 
-                <div id="time" style="float:right" ng-controller="countController" ng-cloak>
+                <div id="time" style="float:right" ng-controller="countController">
                 <span>Closes in:&nbsp;&nbsp;&nbsp;<span ng-show="showDay" class="big-size">{{days}}</span><span>&nbsp;days, </span></span><span
                     class="big-size"> {{hours}} : {{mins}} : {{seconds}}</span>
             </div>
         </div>
 
-        <div id="tablelist" class="table-responsive" ng-controller="LeaderBoardController" ng-class="showListClassName" ng-cloak>
+        <div id="tablelist" class="table-responsive" ng-controller="LeaderBoardController" ng-class="showListClassName">
             <table class="table table-box">
                 <thead>
                 <tr class="table-header ">
