--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/leaderboard.css" rel="stylesheet">
 </head>
 <body>
-<div class="container-fluid" id="background-container">
+<div class="container-fluid"> 
     <div class="container" ng-app="leaderBoardApp">
 
         <div id="firstRow" class="row">
@@ -26,7 +26,7 @@
         </div>
 
         <div id="secRow" class="row">
-            <span id="title" class="text-nowrap">Welcome App Leaderboard</span>
+            <span id="title">Welcome App Leaderboard</span>
 
 
                 <div id="time" style="float:right" ng-controller="countController" ng-hide="dataPrepared">
@@ -45,7 +45,7 @@
                     </th>
                 </tr>
                 </thead>
-                <tbody ng-hide="dataPrepared">
+                <tbody>
                 <tr ng-repeat="item in items | limitTo:10 ">
                     <td class="text-center">{{$index + 1}}</td>
                     <td class="text-left text-ellipsis">{{item.first_name}} {{item.last_name}}</td>
@@ -82,6 +82,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.min.js"></script>
+<script src="js/background.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/ie-compatiable.js"></script>
 <script src="js/angular.min.js"></script>
