renamed:    js/controllers.js -> js/countdown-controllers.js

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <script src="js/angular.min.js"></script>
 <script src="js/angular-resource.min.js"></script>
 <script type="text/javascript" src="./angular.js"></script>
-<script type="text/javascript" src="./js/controllers.js"></script>
+<script type="text/javascript" src="./js/countdown-controllers.js"></script>
 <script type="text/javascript" src="js/leader-board-controller.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="js/ie10-viewport-bug-workaround.js"></script>
