--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <tr class="table-header ">
                     <th width="50px" class="text-center">RANK</th>
                     <th>NAME</th>
-                    <th width="120px" class="text-center text-nowrap">TIME<span style="color:rgba(94, 0, 126, 0.4)">(HH:MM:SS)</span>
+                    <th width="120px" class="text-center text-nowrap">TIME<span style="color:#98ACE1">(HH:MM:SS)</span>
                     </th>
                 </tr>
                 </thead>
