--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 <script src="js/angular.min.js"></script>
 <script src="js/angular-resource.min.js"></script>
 <script type="text/javascript" src="./angular.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="./js/countdown-controllers.js"></script>
 <script type="text/javascript" src="js/leader-board-controller.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
