[Tong]:Fix view when days < 2, and add default value in countdown-controllers.js

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span id="title">Welcome App Leaderboard</span>
 
                 <div id="time" style="float:right" ng-controller="countController">
-                <span>Closes in:&nbsp;&nbsp;&nbsp;<span ng-show="showDay" class="big-size">{{days}}</span><span>&nbsp;days, </span></span><span
+                <span>Closes in:&nbsp;&nbsp;&nbsp;<span ng-show="showDay" class="big-size">{{days}}</span><span ng-show="showDay">&nbsp;days, </span></span><span
                     class="big-size"> {{hours}} : {{mins}} : {{seconds}}</span>
             </div>
         </div>
