--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <title>Welcome App Leaderboard</title>
     <!-- Custom styles for this page -->
     <link href="css/leaderboard.css" rel="stylesheet">
+	<link rel="stylesheet" media="only screen and (max-width: 450px) and (orientation:portrait)" href="css/mobile.css">
 </head>
 <body>
-<div class="container-fluid"> 
+<div class="background-container container-fluid">
     <div class="container" ng-app="leaderBoardApp">
 
         <div id="firstRow" class="row">
@@ -79,7 +80,6 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.min.js"></script>
-<script src="js/background.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/ie-compatiable.js"></script>
 <script src="js/angular.min.js"></script>
@@ -98,6 +98,9 @@
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
+<!--[if lte IE 9]>
+	<link href="css/ie-fix.css" rel="stylesheet">
 <![endif]-->
 </body>
 </html>
