fixed css transform and ie8 js bugs

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <title>Welcome App Leaderboard</title>
     <!-- Custom styles for this page -->
     <link href="css/leaderboard.css" rel="stylesheet">
-	<link rel="stylesheet" media="only screen and (max-width: 450px) and (orientation:portrait)" href="css/mobile.css">
 </head>
 <body>
-<div class="container-fluid"> 
+<div class="container-fluid background-container"> 
     <div class="container" id="leaderBoardApp">
 
         <div id="firstRow" class="row">
