make requirejs work with karma

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/lib/requirejs/require.js" data-main="js/config.js"></script>
-<script type="text/javascript" src="js/ie-compatiable.js"></script>
+<script type="text/javascript" src="js/lib/ie/ie-compatiable.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="js/ie10-viewport-bug-workaround.js"></script>
-<script src="js/respond.min.js"></script>
-<script src="js/respond.matchmedia.addListener.min.js"></script>
+<script src="js/lib/ie/ie10-viewport-bug-workaround.js"></script>
+<script src="js/lib/responsive/respond.min.js"></script>
+<script src="js/lib/responsive/respond.matchmedia.addListener.min.js"></script>
 <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-<script src="js/ie-emulation-modes-warning.js"></script>
+<script src="js/lib/ie/ie-emulation-modes-warning.js"></script>
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
