--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="container-fluid background-container"> 
-    <div class="container" id="leaderBoardApp">
+    <div class="container" >
 
         <div id="firstRow" class="row">
             <img width="34px" height="40px" src="img/t-logo.png">
